--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
                 android:textSize="@dimen/sp_14" />
 
             <ImageView
+                android:id="@+id/iv_branch"
                 android:layout_width="@dimen/dp_18"
                 android:layout_height="@dimen/dp_18"
                 android:layout_alignParentRight="true"
