--- a/app/src/main/res/layout/activity_branch.xml
+++ b/app/src/main/res/layout/activity_branch.xml
@@ -38,4 +38,25 @@
         android:layout_marginTop="@dimen/dp_20"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    
+    <LinearLayout
+        android:id="@+id/lll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+        
+        <ImageView
+            android:src="@drawable/system_message"
+            android:layout_width="@dimen/dp_164"
+            android:layout_height="@dimen/dp_164"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#fff"
+            android:textSize="@dimen/sp_14"
+            android:gravity="center"
+            android:layout_marginTop="@dimen/dp_23"
+            android:text="没有相关搜索结果\n换个词试试吧"/>
+    </LinearLayout>
 </LinearLayout>
